--- a/Priority Queue/PriorityQueue.ipynb
+++ b/Priority Queue/PriorityQueue.ipynb
@@ -33,10 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node:  \n",
-    "    def __init__ (self, name, prio):\n",
-    "        self.Name = name\n",
-    "        self.Prio = prio"
+    "class Node:\n",
+    "    def __init__(self, name_input, prio_input):\n",
+    "        self.name = name_input\n",
+    "        self.prio = prio_input"
    ]
   },
   {
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Elements = []\n",
-    "Heapsize = 0"
+    "ELEMENTS = []\n",
+    "HEAPSIZE = 0"
    ]
   },
   {
@@ -73,9 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ResetPQ ():\n",
-    "    global Elements, Heapsize\n",
-    "    Elements, Heapsize = [], 0"
+    "def reset_pq():\n",
+    "    global ELEMENTS, HEAPSIZE\n",
+    "    ELEMENTS, HEAPSIZE = [], 0"
    ]
   },
   {
@@ -93,13 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parent (i):\n",
+    "def parent(i):\n",
     "    return (i-1)//2 # '//' means division with floor function (round down)\n",
     "\n",
-    "def left (i):\n",
+    "def left(i):\n",
     "    return 2*i+1\n",
     "\n",
-    "def right (i):\n",
+    "def right(i):\n",
     "    return 2*i+2"
    ]
   },
@@ -118,92 +118,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Initialize (initialelements = []):\n",
-    "    for name, prio in initialelements:\n",
-    "        Insert_Key (name, prio)\n",
+    "def initialize(initial_elements = []):\n",
+    "    for name_input, prio_input in initial_elements:\n",
+    "        insert_key(name_input, prio_input)\n",
     "        \n",
-    "def Insert_Key (name, prio):\n",
-    "        global Elements, Heapsize\n",
+    "def insert_key(name_input, prio_input):\n",
+    "        global ELEMENTS, HEAPSIZE\n",
     "        name_already_exists = False\n",
-    "        for el in Elements:\n",
-    "            if el.Name == name:\n",
+    "        for element in ELEMENTS:\n",
+    "            if element.name == name_input:\n",
     "                name_already_exists = True\n",
     "        if not name_already_exists:\n",
-    "            Elements.append (Node (name, float('inf'))) # float('inf') = positive infinity\n",
-    "            Heap_Decrease_Key (Heapsize, prio)\n",
-    "            Heapsize += 1   \n",
+    "            ELEMENTS.append(Node (name_input, float('inf'))) # float('inf') = positive infinity\n",
+    "            heap_decrease_key(HEAPSIZE, prio_input)\n",
+    "            HEAPSIZE += 1   \n",
     "        else:\n",
-    "            print (\"\\nThere is already an element named\",name,\"Please choose a different Name.\")\n",
+    "            print(\"\\nThere is already an element named\", name_input, \"Please choose a different Name.\")\n",
     "            \n",
-    "def Heap_Decrease_Key (i, prio):\n",
-    "    global Elements \n",
-    "    if prio >= Elements [i].Prio:\n",
-    "        print (\"\\nERROR: New priority must be smaller than old priority\")\n",
+    "def heap_decrease_key(i, prio_input):\n",
+    "    global ELEMENTS \n",
+    "    if prio_input >= ELEMENTS[i].prio:\n",
+    "        print(\"\\nERROR: New priority must be smaller than old priority\")\n",
     "        return       \n",
-    "    Elements [i].Prio = prio   \n",
-    "    while i > 0 and Elements [parent (i)].Prio > Elements [i].Prio:\n",
-    "        Elements [i], Elements [parent (i)] = Elements [parent (i)], Elements [i]\n",
-    "        i = parent (i)\n",
+    "    ELEMENTS[i].prio = prio_input   \n",
+    "    while i > 0 and ELEMENTS[parent(i)].prio > ELEMENTS[i].prio:\n",
+    "        ELEMENTS[i], ELEMENTS[parent(i)] = ELEMENTS[parent(i)], ELEMENTS[i]\n",
+    "        i = parent(i)\n",
     "        \n",
-    "def Extract_Min ():\n",
-    "    global Elements, Heapsize\n",
-    "    if Heapsize < 1:\n",
-    "        print (\"\\nERROR: Underflow. Cannot extract from an empty Queue\")\n",
+    "def extract_min():\n",
+    "    global ELEMENTS, HEAPSIZE\n",
+    "    if HEAPSIZE < 1:\n",
+    "        print(\"\\nERROR: Underflow. Cannot extract from an empty Queue\")\n",
     "        return      \n",
-    "    min_element = Elements [0]\n",
-    "    Heapsize -= 1\n",
-    "    Elements = Elements [1:] # Deletes first Element\n",
-    "    Min_Heapify (0)   \n",
-    "    print (\"\\nElement\", min_element.Name, \"with Priority\", min_element.Prio, \"has been extracted\")\n",
+    "    min_element = ELEMENTS[0]\n",
+    "    HEAPSIZE -= 1\n",
+    "    ELEMENTS = ELEMENTS[1:] # Deletes first Element\n",
+    "    min_heapify(0)   \n",
+    "    print(\"\\nElement\", min_element.name, \"with Priority\", min_element.prio, \"has been extracted\")\n",
     "        \n",
-    "def Min_Heapify (i):\n",
-    "    global Elements, Heapsize\n",
-    "    l = left (i)\n",
-    "    r = right (i)   \n",
-    "    if l < Heapsize and Elements [l].Prio < Elements [i].Prio:\n",
+    "def min_heapify(i):\n",
+    "    global ELEMENTS, HEAPSIZE\n",
+    "    l = left(i)\n",
+    "    r = right(i)   \n",
+    "    if l < HEAPSIZE and ELEMENTS[l].prio < ELEMENTS[i].prio:\n",
     "        minimum = l\n",
     "    else:\n",
     "        minimum = i       \n",
-    "    if r < Heapsize and Elements [r].Prio < Elements [minimum].Prio:\n",
+    "    if r < HEAPSIZE and ELEMENTS[r].prio < ELEMENTS[minimum].prio:\n",
     "        minimum = r   \n",
     "    if minimum != i:\n",
-    "        Elements [i], Elements [minimum] = Elements [minimum], Elements [i]\n",
-    "        Min_Heapify (minimum)\n",
-    "\n",
-    "        \n",
-    "def Reduce_Priority (name, new_prio):\n",
-    "    global Elements   \n",
+    "        ELEMENTS[i], ELEMENTS[minimum] = ELEMENTS[minimum], ELEMENTS[i]\n",
+    "        min_heapify(minimum)\n",
+    "    \n",
+    "def reduce_priority(name_to_be_searched, prio_input):\n",
+    "    global ELEMENTS   \n",
     "    key_found = False  \n",
-    "    for index, el in enumerate(Elements):\n",
-    "        if el.Name == name:\n",
+    "    for index, element in enumerate(ELEMENTS):\n",
+    "        if element.name == name_to_be_searched:\n",
     "            key_found = True\n",
     "            at_index = index\n",
     "            break          \n",
     "    if not key_found:      \n",
-    "        print (\"\\nERROR: Element whose Priority you want to decrease does not exist\")\n",
+    "        print(\"\\nERROR: Element whose Priority you want to decrease does not exist\")\n",
     "        return     \n",
-    "    if Elements [at_index].Prio <= new_prio: \n",
-    "        print (\"\\nERROR: New Priority of\",Elements [at_index].Name ,\"is not lower than old Priority! Priority may only ever decrease. Priority stays unchanged\")\n",
+    "    if ELEMENTS[at_index].prio <= prio_input: \n",
+    "        print(\"\\nERROR: New Priority of\", ELEMENTS[at_index].name, \n",
+    "              \"is not lower than old Priority! Priority may only ever decrease. Priority stays unchanged\")\n",
     "        return\n",
-    "    Heap_Decrease_Key (at_index,new_prio)\n",
+    "    heap_decrease_key(at_index, prio_input)\n",
     "    \n",
-    "def PrintPQ (show_name = True, show_prio = True):\n",
-    "    global Elements, Heapsize\n",
-    "    if Heapsize < 1:\n",
-    "        print (\"\\nThe current Priority Queue is empty! Nothing to Print\")\n",
+    "def print_pq(show_name=True, show_prio=True):\n",
+    "    if HEAPSIZE < 1:\n",
+    "        print(\"\\nThe current Priority Queue is empty! Nothing to Print\")\n",
     "        return \n",
     "    if not show_name and not show_prio:\n",
-    "        print (\"\\nYou have to atleast print the Names or the Priorities\")\n",
+    "        print(\"\\nYou have to atleast print the Names or the Priorities\")\n",
     "    printarray = [] \n",
-    "    for el in Elements:\n",
+    "    for element in ELEMENTS:\n",
     "        if show_name and show_prio:\n",
-    "            printarray.append ( (el.Name,el.Prio) )\n",
+    "            printarray.append((element.name,element.prio))\n",
     "        elif show_name:\n",
-    "            printarray.append (el.Name)\n",
+    "            printarray.append(element.name)\n",
     "        else:\n",
-    "            printarray.append (el.Prio)\n",
-    "    print (\"\\nThe current Priority Queue of size\",Heapsize,\"is: --> Printing Names:\",show_name, \"- Printing Priorities:\",show_prio)  \n",
-    "    print (printarray)"
+    "            printarray.append(element.prio)\n",
+    "    print(\"\\nThe current Priority Queue of size\", HEAPSIZE, \"is: --> Printing Names:\",\n",
+    "           show_name, \"- Printing Priorities:\", show_prio)  \n",
+    "    print(printarray)"
    ]
   },
   {
@@ -245,44 +245,44 @@
     }
    ],
    "source": [
-    "# this list saves the initial Elements you want to Enqueue. The Name of the Key is written in Ticks ('') on the left side of each pair\n",
+    "# This list saves the initial Elements you want to Enqueue. The Name of the Key is written in Ticks ('') on the left side of each pair\n",
     "# The corresponding Priority is written on the right side of each pair\n",
     "# This example initializes the Priority Queue with a Key named 'A' with Priority 4, another Key named 'B' with Priority 2, etc\n",
     "# Note that this is a MIN-PRIORITY-QUEUE. The lower the number representing Priority, the higher the Priority (lower is better)\n",
     "\n",
-    "# if you dont want to initialize anything leave the array empty --> \"initialelements = []\"\n",
-    "# Alternatively remove initialelements from the Initialize-Function's Parameters --> \"Initialize ()\"\n",
+    "# If you dont want to initialize anything leave the array empty --> \"initial_elements = []\"\n",
+    "# Alternatively remove initial_elements from the initialize-function's parameters --> \"initialize ()\"\n",
     "\n",
-    "initialelements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "Initialize (initialelements)\n",
+    "initialize (initial_elements)\n",
     "\n",
     "# Prints the current contents of the Priority Queue aswell as size\n",
     "# The Boolean Values allow you to select what you want to be printed.\n",
     "# In the example below both Name and Priority of each Element will be printed\n",
-    "# Calling PrintPQ without Parameters is the same as both Booleans being True\n",
-    "PrintPQ (show_name = True, show_prio = True)\n",
+    "# Calling print_pq without parameters is the same as both Booleans being True\n",
+    "print_pq (show_name = True, show_prio = True)\n",
     "\n",
     "# If you only want the name to be printed, have \"show_name = True\" and \"show_prio = False\":\n",
     "# And vice versa\n",
-    "PrintPQ (show_name = True, show_prio = False)\n",
+    "print_pq (show_name = True, show_prio = False)\n",
     "\n",
     "# Extracts the Element with the lowest Priority and Prints what its Data was\n",
-    "Extract_Min ()\n",
+    "extract_min ()\n",
     "\n",
-    "PrintPQ (show_name = True, show_prio = True)\n",
+    "print_pq (show_name = True, show_prio = True)\n",
     "\n",
-    "# Same Idea as with intialelements but only one Element at a time\n",
-    "Insert_Key ('F', 3)\n",
+    "# Same Idea as with intial_elements but only one Element at a time\n",
+    "insert_key ('F', 3)\n",
     "\n",
-    "PrintPQ (show_name = True, show_prio = True)\n",
+    "print_pq (show_name = True, show_prio = True)\n",
     "\n",
     "# Instead of creating a new unique name, give the name of an existing Element whose Priority you want to change (give new Priority as right value)\n",
-    "Reduce_Priority ('F', 2)\n",
+    "reduce_priority ('F', 2)\n",
     "\n",
-    "PrintPQ (show_name = False, show_prio = True)\n",
+    "print_pq (show_name = False, show_prio = True)\n",
     "\n",
-    "ResetPQ () # Resets Contents of Priority Queue (ignore)"
+    "reset_pq () # Resets Contents of Priority Queue (ignore)"
    ]
   },
   {
@@ -315,17 +315,17 @@
     }
    ],
    "source": [
-    "initialelements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "Initialize (initialelements)\n",
+    "initialize (initial_elements)\n",
     "\n",
-    "PrintPQ (show_name = True, show_prio = True)\n",
+    "print_pq (show_name = True, show_prio = True)\n",
     "\n",
-    "Reduce_Priority ('F', 2)\n",
+    "reduce_priority ('F', 2)\n",
     "\n",
-    "PrintPQ (show_name = True, show_prio = True)\n",
+    "print_pq (show_name = True, show_prio = True)\n",
     "\n",
-    "ResetPQ () # Resets Contents of Priority Queue (ignore)"
+    "reset_pq () # Resets Contents of Priority Queue (ignore)"
    ]
   },
   {
@@ -343,13 +343,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "initialelements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
+    "initial_elements = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
-    "Initialize (initialelements)\n",
+    "initialize (initial_elements)\n",
     "\n",
-    "Insert_Key ('F', 3)\n",
+    "insert_key ('F', 3)\n",
     "\n",
-    "Reduce_Priority ('A', 3)"
+    "reduce_priority ('A', 3)"
    ]
   },
   {
@@ -426,7 +426,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f2d219a9d90>"
+       "<graphviz.graphs.Graph at 0x7fdd447837f0>"
       ]
      },
      "execution_count": 9,
@@ -436,17 +436,17 @@
    ],
    "source": [
     "from graphviz import Graph  \n",
-    "global Elements, Heapsize\n",
-    "dot = Graph ()\n",
-    "for index in range (len (Elements)):       \n",
-    "    if left (index) < Heapsize:    \n",
-    "        start = Elements [index].Name + \",\" + str(Elements [index].Prio) # Concatinating the Name of each Element together with its Priority into a single string\n",
-    "        dest = Elements [left(index)].Name + \",\" + str(Elements [left(index)].Prio)\n",
-    "        dot.edge (start,dest)\n",
-    "    if right (index) < Heapsize:\n",
-    "        start = Elements [index].Name + \",\" + str(Elements [index].Prio)\n",
-    "        dest = Elements [right(index)].Name + \",\" + str(Elements [right(index)].Prio)\n",
-    "        dot.edge (start,dest)\n",
+    "\n",
+    "dot = Graph()\n",
+    "for index in range(len(ELEMENTS)):       \n",
+    "    if left(index) < HEAPSIZE:    \n",
+    "        start = ELEMENTS[index].name + \",\" + str(ELEMENTS[index].prio) # Concatinating the Name of each Element together with its Priority into a single string\n",
+    "        destination = ELEMENTS[left(index)].name + \",\" + str(ELEMENTS[left(index)].prio)\n",
+    "        dot.edge(start,destination)\n",
+    "    if right(index) < HEAPSIZE:\n",
+    "        start = ELEMENTS[index].name + \",\" + str(ELEMENTS[index].prio)\n",
+    "        destination = ELEMENTS[right(index)].name + \",\" + str(ELEMENTS[right(index)].prio)\n",
+    "        dot.edge(start,destination)\n",
     "dot"
    ]
   }
