--- a/Priority Queue/PriorityQueueVisualization.ipynb
+++ b/Priority Queue/PriorityQueueVisualization.ipynb
@@ -426,18 +426,18 @@
     "                  fontsize=16, verticalalignment='center', horizontalalignment='center')\n",
     " \n",
     "    for operation_index, my_tuple in enumerate(STEPS):\n",
-    "        indexA = my_tuple[0]\n",
-    "        indexB = my_tuple[1]\n",
-    "        Type = my_tuple[2]\n",
-    "        if Type == 'COMPARED_FALSE':\n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET],\n",
+    "        index_a = my_tuple[0]\n",
+    "        index_b = my_tuple[1]\n",
+    "        operation_type = my_tuple[2]\n",
+    "        if operation_type == 'COMPARED_FALSE':\n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET],\n",
     "                          linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_COMPARED_FALSE, alpha=ALPHA_VAL)\n",
     "            \n",
-    "            plt.plot([operation_index,operation_index], [indexB-OFFSET,indexB+OFFSET],\n",
+    "            plt.plot([operation_index,operation_index], [index_b-OFFSET,index_b+OFFSET],\n",
     "                          linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_COMPARED_FALSE, alpha=ALPHA_VAL)\n",
     "            \n",
-    "            left_operand = STATES[operation_index][indexA]\n",
-    "            right_operand = STATES[operation_index][indexB]\n",
+    "            left_operand = STATES[operation_index][index_a]\n",
+    "            right_operand = STATES[operation_index][index_b]\n",
     "            \n",
     "            plt.text(x=operation_index, y=MAX_HEAPSIZE+0.3, s=str(left_operand.name) + ',' + str(left_operand.prio), # TODO work with box\n",
     "                    fontsize=16, verticalalignment='center', horizontalalignment='center',  bbox=dict(facecolor=COL_COMPARED_FALSE, edgecolor=COL_COMPARED_FALSE, pad=5.0, fill = True, alpha = ALPHA_VAL))\n",
@@ -448,15 +448,15 @@
     "            plt.text(x=operation_index, y=MAX_HEAPSIZE-0.3, s=str(right_operand.name) + ',' + str(right_operand.prio),\n",
     "                    fontsize=16, verticalalignment='center', horizontalalignment='center', bbox=dict(facecolor=COL_COMPARED_FALSE, edgecolor=COL_COMPARED_FALSE, pad=5.0, fill=True, alpha=ALPHA_VAL))\n",
     "\n",
-    "        elif Type == 'COMPARED_TRUE':\n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET],\n",
+    "        elif operation_type == 'COMPARED_TRUE':\n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET],\n",
     "                          linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_COMPARED_TRUE, alpha=ALPHA_VAL)\n",
     "\n",
-    "            plt.plot([operation_index,operation_index], [indexB-OFFSET,indexB+OFFSET],\n",
+    "            plt.plot([operation_index,operation_index], [index_b-OFFSET,index_b+OFFSET],\n",
     "                          linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_COMPARED_TRUE, alpha=ALPHA_VAL)\n",
     "            \n",
-    "            left_operand = STATES[operation_index][indexA]\n",
-    "            right_operand = STATES[operation_index][indexB]\n",
+    "            left_operand = STATES[operation_index][index_a]\n",
+    "            right_operand = STATES[operation_index][index_b]\n",
     "\n",
     "            plt.text(x=operation_index, y=MAX_HEAPSIZE+0.3, s=str(left_operand.name) + ',' + str(left_operand.prio),\n",
     "                    fontsize=16, verticalalignment='center', horizontalalignment='center', bbox=dict(facecolor=COL_COMPARED_TRUE, edgecolor=COL_COMPARED_TRUE, pad=5.0, fill=True, alpha=ALPHA_VAL))\n",
@@ -467,12 +467,12 @@
     "            plt.text(x=operation_index, y=MAX_HEAPSIZE-0.3, s=str(right_operand.name) + ',' + str(right_operand.prio),\n",
     "                    fontsize=16, verticalalignment='center', horizontalalignment='center', bbox=dict(facecolor=COL_COMPARED_TRUE, edgecolor=COL_COMPARED_TRUE, pad=5.0, fill=True, alpha=ALPHA_VAL))\n",
     "\n",
-    "        elif Type == 'REDUCTION':\n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_REDUCTION, alpha=ALPHA_VAL)\n",
+    "        elif operation_type == 'REDUCTION':\n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_REDUCTION, alpha=ALPHA_VAL)\n",
     "\n",
-    "        elif Type == 'EXCHANGED':\n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
-    "            plt.plot([operation_index,operation_index], [indexB-OFFSET,indexB+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
+    "        elif operation_type == 'EXCHANGED':\n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
+    "            plt.plot([operation_index,operation_index], [index_b-OFFSET,index_b+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
     "            # With the min_heapify(i) operation, there is the possibility for a comparison returning True to be followed by a comparison returning False before the keys are being exchanged.\n",
     "            # This happens when the given left index is smaller than the right with the right one still existing. In that case the arrow is of roughly size 2, while normally it is of size 1\n",
     "            # Since i don't want to distinguish min-heapify(i), i look for the last comparison returning True as it is the one responsible for the exchange\n",
@@ -488,24 +488,24 @@
     "            # 1-2*desired_linewidth/180 represents the space between two highlighting boxes if they are adjacent. It is represented by the dashed line \"---\",\n",
     "            # the square brackets represent the highlighting boxes respectively\n",
     "            # [ a,1 ]---[ b,2 ]\n",
-    "            plt.arrow(x=xinput, y=indexA, dx=dxinput, dy=indexB - indexA, head_width=0.05, length_includes_head=True, width=0.0025)\n",
-    "            plt.arrow(x=xinput, y=indexB, dx=dxinput, dy=indexA - indexB, head_width=0.05, length_includes_head=True, width=0.0025)\n",
+    "            plt.arrow(x=xinput, y=index_a, dx=dxinput, dy=index_b - index_a, head_width=0.05, length_includes_head=True, width=0.0025)\n",
+    "            plt.arrow(x=xinput, y=index_b, dx=dxinput, dy=index_a - index_b, head_width=0.05, length_includes_head=True, width=0.0025)\n",
     "\n",
-    "        elif Type == 'INSERTED_AS_INFINITY':\n",
-    "            plt.arrow(x=operation_index+desired_linewidth/180, y=indexA, dx=1-2*desired_linewidth/180, dy=0, head_width=0.1, length_includes_head=True, width=0.01, color=COL_INSERTION, alpha=0.4) \n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_INSERTION, alpha=ALPHA_VAL)\n",
+    "        elif operation_type == 'INSERTED_AS_INFINITY':\n",
+    "            plt.arrow(x=operation_index+desired_linewidth/180, y=index_a, dx=1-2*desired_linewidth/180, dy=0, head_width=0.1, length_includes_head=True, width=0.01, color=COL_INSERTION, alpha=0.4) \n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_INSERTION, alpha=ALPHA_VAL)\n",
     "\n",
-    "        elif Type == 'EXTRACTION':\n",
-    "            plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXTRACTION, alpha=ALPHA_VAL+0.2)\n",
+    "        elif operation_type == 'EXTRACTION':\n",
+    "            plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXTRACTION, alpha=ALPHA_VAL+0.2)\n",
     "\n",
-    "        elif Type == 'SWAP_AND_DELETE':\n",
-    "            if indexB != '_': # Swap (technically the same as EXCHANGED but I do not want the arrows. That's why its seperated)\n",
-    "                plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
-    "                plt.plot([operation_index,operation_index], [indexB-OFFSET,indexB+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
+    "        elif operation_type == 'SWAP_AND_DELETE':\n",
+    "            if index_b != '_': # Swap (technically the same as EXCHANGED but I do not want the arrows. That's why its seperated)\n",
+    "                plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
+    "                plt.plot([operation_index,operation_index], [index_b-OFFSET,index_b+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_EXCHANGED, alpha=ALPHA_VAL)\n",
     "            else: # Delete\n",
-    "                plt.plot([operation_index,operation_index], [indexA-OFFSET,indexA+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_DELETED, alpha=ALPHA_VAL+0.2)\n",
+    "                plt.plot([operation_index,operation_index], [index_a-OFFSET,index_a+OFFSET], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_DELETED, alpha=ALPHA_VAL+0.2)\n",
     "\n",
-    "        else: # Type == 'OVERFLOW_UNDERFLOW'\n",
+    "        else: # operation_type == 'OVERFLOW_UNDERFLOW'\n",
     "            plt.plot([operation_index,operation_index], [0-OFFSET, MAX_HEAPSIZE], linewidth=desired_linewidth, solid_capstyle=\"butt\", color=COL_OVERFLOW_UNDERFLOW, alpha=ALPHA_VAL+0.2)\n",
     "    plt.xlabel('Operations', fontsize=20)\n",
     "    plt.ylabel('Array Indices', fontsize=20)\n",
